<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorActivityBackground"
              android:orientation="vertical"
              tools:context="me.bakumon.ugank.module.search.SearchActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_search"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:titleTextColor="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingRight="15dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/ed_search"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/search_tip"
                    android:imeOptions="actionSearch"
                    android:singleLine="true"
                    android:textSize="16sp"/>

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/iv_edit_clear"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="8dp"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_edit_clear"/>

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/iv_search"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@null"
                    android:tint="@android:color/white"
                    app:srcCompat="@drawable/ic_search_gank"/>
            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <com.luolc.emojirain.EmojiRainLayout
        android:id="@+id/emoji_rainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:dropDuration="2000"
        app:dropFrequency="500"
        app:duration="5000"
        app:per="9">

        <LinearLayout
            android:id="@+id/ll_search_history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/search_history"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/tv_search_clean"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:padding="5dp"
                    android:text="@string/search_clean"
                    android:textColor="@color/select_press_color_gray"
                    android:textSize="12sp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorDivider"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_search_history"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"/>

        </LinearLayout>

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <me.bakumon.ugank.widget.recyclerviewwithfooter.RecyclerViewWithFooter
                android:id="@+id/recycler_view_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                tools:listitem="@layout/item_search"/>
        </android.support.v4.widget.SwipeRefreshLayout>
    </com.luolc.emojirain.EmojiRainLayout>

</LinearLayout>
